--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 192.9.183.183, port: 28000, type: trojan, password: 5108ad44-d614-459f-95bf-798b9eb3fdb8, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-213.7KB/s(Youtube:不良林), server: 185.246.155.46, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
-  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇭🇰 香港-462.2KB/s(Youtube:不良林), server: tx-vip-09.top, port: 443, type: trojan, password: q8uTrVmj95aTrFAa, sni: tx-vip-09.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林), server: 185.167.116.253, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 阿联酋-344.9KB/s(Youtube:不良林), server: 217.138.193.6, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-632.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-1.57MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.17MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-875.1KB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.34MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-758.7KB/s(Youtube:不良林), server: 198.200.51.219, port: 26969, type: trojan, password: 151dada5-c12e-4eb3-940e-d93f365f8a4a, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.24MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-210.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林), server: 213.183.53.221, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-603.2KB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-471.9KB/s(Youtube:不良林), server: 185.246.155.23, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林), server: 213.183.53.221, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-213.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇭🇰 香港-462.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 阿联酋-344.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-632.9KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-875.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-758.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.24MB/s(Youtube:不良林)
+      - 🇯🇵 日本-210.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-769.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-603.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-471.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-513.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
