--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.19MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林), server: 185.167.116.253, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇳🇱 荷兰-622.4KB/s(Youtube:不良林), server: 185.246.155.29, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇨🇳 中国-3.12MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: 185.167.116.253, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: 185.167.116.38, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.19MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-383.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
