--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林), server: 185.167.116.253, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇳🇱 荷兰-622.4KB/s(Youtube:不良林), server: 185.246.155.29, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇨🇳 中国-3.12MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.98MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: 185.167.116.253, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: 185.167.116.252, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: 185.167.116.38, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林), server: 185.167.116.38, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-2.72MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20006, type: trojan, password: 99109e49-a3ed-4d9b-ace5-3898d517d0ff, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇩🇪 德国-1.16MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-8.80MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 塞尔维亚-446.2KB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 波兰-1.02MB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 波兰-1.28MB/s(Youtube:不良林), server: 217.30.10.67, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 波兰-1.52MB/s(Youtube:不良林), server: 217.30.10.67, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 波兰-1.35MB/s(Youtube:不良林), server: 217.30.10.67, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-873.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-622.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-594.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.72MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.80MB/s(Youtube:不良林)
+      - 塞尔维亚-446.2KB/s(Youtube:不良林)
+      - 波兰-1.02MB/s(Youtube:不良林)
+      - 波兰-1.28MB/s(Youtube:不良林)
+      - 波兰-1.52MB/s(Youtube:不良林)
+      - 波兰-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
